--- a/Estilo.css
+++ b/Estilo.css
@@ -1,13 +1,39 @@
-.conteudo {
+/*.conteudo {
     border: 1px solid red;
     /* padding-top: 20px;
     padding-right: 20px;
     padding-bottom: 20px;
     padding-left: 20px;*/
-    /*padding: 20px 15px 10px 5px;*/
+    /*padding: 20px 15px 10px 5px;
     padding: 20px;
 
     margin: 20px;
 
     width: 150px;
+}*/
+#principal {
+    border: 1px solid red;
 }
+
+.conteudo {
+    background: cadetblue;
+    border: 1px solid gray;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    float: left;
+}
+
+
+.clear {
+    clear: both;
+
+}
+
+/*.conteudo1 {
+    background: rgb(219, 209, 59);
+    border: 1px solid gray;
+    width: 200px;
+    height: 200px;
+    float: right;
+}*/
