--- a/HTML + CSS intermediario e avançado/Estilo2.css
+++ b/HTML + CSS intermediario e avançado/Estilo2.css
@@ -66,32 +66,64 @@ ul #atual a {
     background: url(Imagens/aba-esquerda-atual.png) no-repeat top left;
 
 }*/
-
+/* LAYOUT-----*/
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background: #f2f2f2;
 }
 
 #container {
-    width: 720px;
+    width: 85%;
     margin: 0 auto;
     background: #fff;
+    min-width: 720px;
+    /*max-width: 960px;*/
 }
 
 #marca {
-    height: 100px;
-    background: #9e9e9e;
+    width: 100%;
+    height: 200px;
+    background: #225992 url(Imagens/cabecalho2.jpg) no-repeat center;
     text-align: center;
-    line-height: 100px;
+    line-height: 200px;
 }
 
-#conteudo {
-    width: 520px;
+#conteudo { 
+    width: 75%;
     float: right;
+}
+/*
+#imagem {
+    width: 90%;
+    overflow: hidden;
+}*/
+
+#conteudo-principal {
+    width: 63%;
+    float: left;
+}
+
+img.img-noticia {
+    width: 94%;
+    padding: 2%;
+}
+
+#conteudo-secundario {
+    width: 34%;
+    float: right;
+    background: #d1d1d1;
+}
+
+#conteudo-secundario h1,
+#conteudo-secundario h2,
+#conteudo-secundario h3,
+#conteudo-secundario p {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #navegacao {
-    width: 180px;
+    width: 23%;
     float: left;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -112,3 +144,5 @@ body {
     background: #c4c4c4;
     padding: 5px;
 }
+
+
