--- a/HTML + CSS intermediario e avançado/Estilo2.css
+++ b/HTML + CSS intermediario e avançado/Estilo2.css
@@ -66,7 +66,7 @@ ul #atual a {
     background: url(Imagens/aba-esquerda-atual.png) no-repeat top left;
 
 }*/
-/* LAYOUT-----*/
+/* LAYOUT-----
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background: #f2f2f2;
@@ -77,9 +77,9 @@ body {
     margin: 0 auto;
     background: #fff;
     min-width: 720px;
-    /*max-width: 960px;*/
+    /*max-width: 960px;
 }
-
+/*
 #marca {
     width: 100%;
     height: 200px;
@@ -96,7 +96,7 @@ body {
 #imagem {
     width: 90%;
     overflow: hidden;
-}*/
+}
 
 #conteudo-principal {
     width: 63%;
@@ -143,6 +143,38 @@ img.img-noticia {
     clear: both;
     background: #c4c4c4;
     padding: 5px;
+}*/
+
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
+table {
+    width: 600px;
+    border-collapse: separate;
+}
 
+th, td {
+    padding: 7px;
+}
+
+th {
+    text-transform: uppercase;
+    border-top: 1px solid #999;
+    border-bottom: 1px solid #111;
+    text-align: left;
+    font-size: 90%;
+    letter-spacing: 0.1em;
+}
+
+tr.alternado {
+    background-color: #efefef;
+}
+
+.numero {
+    text-align: right;
+}
+
+tr:hover {
+    background: #c3e6e5;
+}
