--- a/HTML + CSS intermediario e avançado/Estilo2.css
+++ b/HTML + CSS intermediario e avançado/Estilo2.css
@@ -143,7 +143,9 @@ img.img-noticia {
     clear: both;
     background: #c4c4c4;
     padding: 5px;
-}*/
+}
+
+TABLES--------
 
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
@@ -177,4 +179,34 @@ tr.alternado {
 
 tr:hover {
     background: #c3e6e5;
+}*/
+
+body {
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
+
+fieldset {
+    margin: 1em 0;
+    padding: 1em;
+    border: 1px solid #ccc;
+    background: #f8f8f8;
+}
+
+legend {
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    cursor: pointer;
+}
+
+input[type="text"] {
+    width: 20em;
+}
+
+textarea {
+    width: 20em;
+    height: 10em;
+}
+
