--- a/HTML + CSS Recursos especiais/Estilo.css
+++ b/HTML + CSS Recursos especiais/Estilo.css
@@ -1,10 +1,12 @@
-#caixa {
-    width: 300px;
-    height: 300px;
-    /*background: #b9c941 url("camera.png");*/
-    background: linear-gradient(to left, #ccc, cadetblue);
+header {
+    border: 1px solid #ccc;
+    background: rgb(245, 179, 179);
 }
 
-#caixa h2 {
-    background: rgba(255, 255, 255, 0.8);
+footer {
+    background: cadetblue;
+}
+
+article {
+    background: greenyellow;
 }
