--- a/HTML + CSS Recursos especiais/Estilo.css
+++ b/HTML + CSS Recursos especiais/Estilo.css
@@ -1,12 +1,21 @@
-header {
-    border: 1px solid #ccc;
-    background: rgb(245, 179, 179);
+#conteudo {
+    background: #dcdcdc;
+    height: 400px;
+    display: flex;
+
+    /*row|row-reverse|column|column-reverse*/
+    flex-direction: row;
+
+    /*nowrap|wrap|wrap-reverse*/
+    flex-wrap: nowrap;
+
+    justify-content: flex-start;
 }
 
-footer {
-    background: cadetblue;
-}
-
-article {
-    background: greenyellow;
+.item {
+    width:100px;
+    height: 100px;
+    margin: 10px;
+    background: white;
+    border: 1px solid grey;
 }
