--- a/HTML + CSS Recursos especiais/Estilo.css
+++ b/HTML + CSS Recursos especiais/Estilo.css
@@ -3,19 +3,37 @@
     height: 400px;
     display: flex;
 
-    /*row|row-reverse|column|column-reverse*/
+    /*row|row-reverse|column|column-reverse
     flex-direction: row;
 
-    /*nowrap|wrap|wrap-reverse*/
+    /*nowrap|wrap|wrap-reverse
     flex-wrap: nowrap;
 
-    justify-content: flex-start;
+    justify-content: space-around;
+    align-items: baseline;*/
 }
 
 .item {
-    width:100px;
+    width: 100px;
     height: 100px;
     margin: 10px;
     background: white;
     border: 1px solid grey;
+    flex-grow: 0;
 }
+
+.item1 {
+    flex-grow: 1;
+}
+/*
+.ordem2 {
+    order: 2;
+}
+
+.ordem3 {
+    order: 3;
+}
+
+.ordem4 {
+    order: 4;
+}*/
