--- a/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
+++ b/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    max-width: 1440px;
 }
 
 body {
@@ -21,15 +22,15 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    height: 100px;
     padding-top: 5px;
 }
 
 #img-logo {
-    width: 200px;
+    width: 150px;
     display: block;
     align-self: center;
-    margin-left: 20px;
+    margin-left: 50px;
     
 }
 
@@ -38,6 +39,7 @@ body {
     align-items: center;
     list-style: none;
     padding: 0.4em;
+    margin-right: 40px;
 }
 
 .nav-link {
@@ -45,7 +47,7 @@ body {
     color: white;
     display: block;
     padding: 0.4rem;
-    margin-right: 1.2em;
+    margin: 0 10px;    
 }
 
 .nav-link#contato {
@@ -81,7 +83,59 @@ body {
 }
 
 #arrow {
-    margin-top: 3.5rem;
+    margin-top: 2rem;
 }
 
-/* SECTION */
+/* SECTION 1 */
+.section1 {
+    display: flex;
+}
+
+.section1 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.text, .img-container {
+    flex: 50%;
+}
+
+.section1 .text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.section1 .text-container {
+    width: 67%;
+}
+
+.section1 h1 {
+    font-family: 'Fraunces', serif;
+    font-size: 40px;
+    width: 80%;
+}
+
+.section1 span {
+    font-family: 'Fraunces', serif;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+.section1 a{
+    text-decoration: none;
+    color: black;
+}
+
+.section1 a:hover {
+    border-bottom: 8px solid rgb(253, 255, 142);
+}
+
+.section1 p {
+    margin: 30px 0;
+    line-height: 1.5em;
+    color: rgb(161, 161, 161);
+}
+
+/* SECTION 2 */
