--- a/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
+++ b/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
@@ -10,7 +10,6 @@ body {
 }
 
 /* HEADER */
-
 .header {
     height: 100vh;
     background-image: url(images/desktop/image-header.jpg);
@@ -129,13 +128,138 @@ body {
 }
 
 .section1 a:hover {
-    border-bottom: 8px solid rgb(253, 255, 142);
+    border-bottom: 8px solid hsl(51, 100%, 49%);
 }
 
 .section1 p {
     margin: 30px 0;
     line-height: 1.5em;
-    color: rgb(161, 161, 161);
+    color: hsl(210, 4%, 67%);
 }
 
 /* SECTION 2 */
+.section2 {
+    display: flex;
+}
+
+.section2 img {
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+}
+
+.section2 .container {
+    position: relative;
+}
+
+.container-text {
+    position: absolute;
+    top: 65%;
+    text-align: center;
+}
+
+.container-text h1 {
+    font-family: 'Fraunces', serif;
+} 
+
+.container-text p{
+    padding: 1.5rem 8rem 1.5rem;
+    line-height: 1.5em;
+}
+
+#left {
+    color: hsl(167, 40%, 24%);
+}
+
+#right {
+    color: hsl(198, 62%, 26%);
+}
+
+/* TESTIMONIALS */
+.testimonials {
+    padding: 7em;
+}
+.testimonials h1 {
+    font-family: 'Fraunces', serif;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 5px;
+    margin-bottom: 5rem;
+}
+
+.container2 {
+    display: flex;
+    text-align: center;
+}
+
+.container2 p {
+    padding: 2rem 1rem;
+    color: hsl(232, 10%, 55%)
+}
+
+.container2 h2 {
+    font-family: 'Fraunces', serif;
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+.container2 h3 {
+    color: hsl(210, 4%, 67%);
+    font-size: 18px;
+}
+
+.container2 img {
+    border-radius: 50%;
+    width: 4.5em;
+    margin-bottom: 1em;
+}
+
+
+/* FOOTER */
+footer {
+    background-color: hsl(168, 44%, 73%);
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 3rem 0;
+}
+
+.footer-logo {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: center;
+}
+
+.footer-logo img {
+    width: 10em;
+    align-self: center;
+
+}
+
+.nav-footer>.nav-links {
+    margin: 0;
+    flex-basis: 100%;
+}
+
+.nav-footer .nav-link {
+    color: hsl(168, 34%, 41%);
+}
+
+.nav-footer .nav-link:hover {
+    color: white;
+}
+
+.social {
+    display: flex;
+    flex-basis: 100%;
+    align-items: center;
+    justify-content: center;
+}
