--- a/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
+++ b/Estudos/Frontend-mentor-sunnyside-agency/teste2.css
@@ -215,6 +215,22 @@ body {
     margin-bottom: 1em;
 }
 
+/* SECTION 3 */
+.img-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.img-container>div {
+    flex: 25%;
+}
+
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /* FOOTER */
 footer {
