--- a/SASS/css/estilo.css
+++ b/SASS/css/estilo.css
@@ -20,4 +20,29 @@ h2 {
   color: red;
 }
 
+/* Interpolação */
+.red {
+  color: red;
+}
+
+/*******************************************/
+/* AULA 2: FOR, THROUGH E TO */
+/* utilizando o THROUGH, lê de 1, 2 e 3 
+   utilizando o TO, lê apenas 1 e 2
+*/
+.item-1 {
+  background: green;
+  margin-bottom: 2px;
+}
+
+.item-2 {
+  background: green;
+  margin-bottom: 2px;
+}
+
+.item-3 {
+  background: green;
+  margin-bottom: 2px;
+}
+
 /*# sourceMappingURL=estilo.css.map */
