--- a/projeto twitter clone/App/Views/index/inscreverse.phtml
+++ b/projeto twitter clone/App/Views/index/inscreverse.phtml
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col">
             
-            <form action="" method="post">
+            <form action="/registrar" method="post">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Nome">
               </div>
