--- a/projeto twitter clone/App/Views/app/timeline.phtml
+++ b/projeto twitter clone/App/Views/app/timeline.phtml
@@ -58,8 +58,8 @@
 		<div class="col-md-6">
 			<div class="row mb-2">
 				<div class="col tweetBox">
-					<form>
-						<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+					<form method="post" action="/tweet">
+						<textarea class="form-control" name="tweet" id="exampleFormControlTextarea1" rows="3"></textarea>
 						
 						<div class="col mt-2 d-flex justify-content-end">
 							<button type="submit" class="btn btn-primary">Tweet</button>
