--- a/projeto twitter clone/App/Views/app/quemSeguir.phtml
+++ b/projeto twitter clone/App/Views/app/quemSeguir.phtml
@@ -87,8 +87,8 @@
 								
 									<div class="col-md-6 d-flex justify-content-end">
 										<div>
-											<a href="#" class="btn btn-success">Seguir</a>
-											<a href="#" class="btn btn-danger">Deixar de seguir</a>
+											<a href="/acao?acao=seguir&id_usuario=<?=$usuario['id']?>" class="btn btn-success">Seguir</a>
+											<a href="/acao?acao=deixar_de_seguir&id_usuario=<?=$usuario['id']?>" class="btn btn-danger">Deixar de seguir</a>
 										</div>
 									</div>
 								</div>
