--- a/projeto twitter clone/App/Views/app/timeline.phtml
+++ b/projeto twitter clone/App/Views/app/timeline.phtml
@@ -71,16 +71,20 @@
 
 			<?php foreach($this->view->tweets as $id_tweet => $tweet) { ?>
 				<div class="row tweet">
+					
 					<div class="col">
 						<p><strong><?=$tweet['nome']?></strong> <span class="text text-muted">- <small><?=$tweet['data']?></small></span></p>
 						<p><?=$tweet['tweet']?></p>
 
-						<br />
-						<form>
-							<div class="col d-flex justify-content-end">
-								<button type="submit" class="btn btn-danger"><small>Remover</small></button>
-							</div>
-						</form>
+						<br>
+
+						<?php if($tweet['id_usuario'] == $_SESSION['id']) { ?>
+							<form>
+								<div class="col d-flex justify-content-end">
+									<button type="submit" class="btn btn-danger"><small>Remover</small></button>
+								</div>
+							</form>
+						<?php } ?>
 					</div>
 				</div>
 			<?php } ?>
